refactor(api): clean chat user DTO boundaries